--- a/app/src/main/res/layout/bus_stop_app_widget.xml
+++ b/app/src/main/res/layout/bus_stop_app_widget.xml
@@ -20,7 +20,6 @@
     <ListView
         android:id="@+id/lv_busstop_widget"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </ListView>
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
