--- a/app/src/main/res/layout/item_recycler_widget.xml
+++ b/app/src/main/res/layout/item_recycler_widget.xml
@@ -1,67 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/ll_recycler_widget_item_layout"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cv_recycler_widget_item_layout"
     android:layout_width="match_parent"
     android:layout_height="87dp"
-    android:orientation="horizontal">
+    android:layout_marginStart="10dp"
+    android:layout_marginTop="5dp"
+    android:layout_marginEnd="10dp"
+    android:layout_marginBottom="5dp"
+    app:cardCornerRadius="10dp">
+
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="3.5"
-        android:orientation="vertical"
-        android:layout_margin="4dp">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/w_tv_lineName"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="703路"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:layout_margin="2dp"/>
+            android:layout_margin="4dp"
+            android:layout_weight="3.5"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/w_tv_endStopName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="12sp"
-            android:text="开往 "
-            android:layout_margin="2dp"/>
+            <TextView
+                android:id="@+id/w_tv_lineName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:text="703路"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/w_tv_currentStopName"
-            android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/w_tv_endStopName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:text="开往 "
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/w_tv_currentStopName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:text="候车站 "
+                android:textSize="12sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textSize="12sp"
-            android:text="候车站 "
-            android:layout_margin="2dp"/>
+            android:layout_margin="4dp"
+            android:layout_weight="1.7"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/w_tv_needTime"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="分"
+                android:textAlignment="center"
+                android:textSize="22sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/w_tv_numStopAndDistance"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="距离"
+                android:textAlignment="center"
+                android:textSize="12sp" />
+        </LinearLayout>
+
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1.7"
-        android:orientation="vertical"
-        android:layout_margin="4dp">
-
-        <TextView
-            android:id="@+id/w_tv_needTime"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:textStyle="bold"
-            android:text="分"
-            android:textAlignment="center"
-            android:textSize="22sp" />
-
-        <TextView
-            android:id="@+id/w_tv_numStopAndDistance"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="12sp"
-            android:text="距离"
-            android:textAlignment="center"
-            android:layout_margin="5dp"/>
-    </LinearLayout>
-
-</LinearLayout>
+</androidx.cardview.widget.CardView>
